Added Blueprint UI

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
-
+@import url(~normalize.css);
+@import url(~@blueprintjs/core/lib/css/blueprint.css);
+@import url(~@blueprintjs/icons/lib/css/blueprint-icons.css);
 
 /*# sourceMappingURL=App.css.map */
