--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,13 @@
 @import "~normalize.css";
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
+
+html {
+  body {
+    * {
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+}
