--- a/src/components/Editor/CodeEditor/index.css
+++ b/src/components/Editor/CodeEditor/index.css
@@ -1,9 +1,8 @@
 .editor-container .editor {
+  width: 100%;
   min-height: 200px; }
   .editor-container .editor .monaco-editor {
-    background: yellow;
+    width: 100% !important;
     min-height: 100%; }
-    .editor-container .editor .monaco-editor .view-lines {
-      background: yellowgreen; }
 
 /*# sourceMappingURL=index.css.map */
