Rename 'Mercury' project name from 'chaesu' temporary name

--- a/src/components/Editor/CodeEditor/index.scss
+++ b/src/components/Editor/CodeEditor/index.scss
@@ -1,10 +1,9 @@
 .editor-container {
   .editor {
     width: 100%;
-    min-height: 200px;
     .monaco-editor {
-      width: 100% !important;
-      min-height: 100%;
+      width: 100%;
+      min-height: 150px;
     }
   }
 }
