Import json viewer on console

--- a/src/components/Editor/CodeEditor/index.scss
+++ b/src/components/Editor/CodeEditor/index.scss
@@ -1,4 +1,11 @@
 .editor-container {
+  .editor-controller-box {
+    text-align: right;
+    margin-bottom: 10px;
+    button {
+      min-width: 100px;
+    }
+  }
   .editor {
     width: 100%;
     .monaco-editor {
