--- a/src/components/Editor/CodeEditor/index.scss
+++ b/src/components/Editor/CodeEditor/index.scss
@@ -29,6 +29,13 @@
         .log-row {
           border-bottom: 1px solid #f0f0f0;
 
+          .log-time {
+            text-align: right;
+            font-size: 12px;
+            color: #5c7080;
+            padding: 5px 5px;
+          }
+
           &.level-log {
           }
 
