--- a/src/components/Editor/CodeEditor/index.scss
+++ b/src/components/Editor/CodeEditor/index.scss
@@ -10,10 +10,10 @@
 
   .editor {
     width: 100%;
-
+    height: 100%;
     .monaco-editor {
-      width: 100%;
-      min-height: 150px;
+      background: blue;
+      height: 100%;
     }
   }
 
@@ -46,7 +46,6 @@
           }
         }
       }
-
     }
   }
 }
