--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
 html {
   body {
     * {
-      font-family: 'Source Code Pro', 'monospace', 'Arial' !important;
+      font-family: "Source Code Pro", "monospace", "Arial", "Icons20", "Font Awesome 5 Free" !important;
       font-weight: 400;
       &:focus {
         outline: none;
