--- a/src/components/Editor/Paragraph/Editor.scss
+++ b/src/components/Editor/Paragraph/Editor.scss
@@ -1,5 +1,6 @@
-@import url('~quill/dist/quill.core.css');
-@import url('~quill/dist/quill.snow.css');
+@import url("~quill/dist/quill.core.css");
+@import url("~quill/dist/quill.snow.css");
+@import url("~quill-better-table/dist/quill-better-table.css");
 
 .mercury-paragraph-editor {
   .ql-toolbar {
