--- a/src/components/Editor/Paragraph/Editor.scss
+++ b/src/components/Editor/Paragraph/Editor.scss
@@ -5,20 +5,18 @@
 .mercury-paragraph-editor {
   .ql-toolbar {
     display: block;
-    position: fixed;
+    position: sticky;
     top: 50px;
     left: 0;
-    z-index: 10;
+    z-index: 11;
     background: #ffffff;
     width: 100%;
     border: none;
-    border-top: 1px solid rgba(16, 22, 26, 0.2);
     border-bottom: 1px solid rgba(16, 22, 26, 0.2);
   }
 
   .ql-container {
     border: none;
-    margin-top: 91px;
     font-weight: inherit;
 
     .ql-editor {
