IMPROVE-38  Move align button and add px size alias on editor

--- a/src/components/Editor/Paragraph/Editor.scss
+++ b/src/components/Editor/Paragraph/Editor.scss
@@ -27,3 +27,23 @@
     }
   }
 }
+
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="14px"]::before {
+  content: "Normal";
+  font-size: 14px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="16px"]::before {
+  content: "Large";
+  font-size: 16px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="18px"]::before {
+  content: "Huge";
+  font-size: 18px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="72px"]::before {
+  content: "왕만함";
+  font-size: 18px !important;
+}
