--- a/src/components/Editor/CodeEditor/index.scss
+++ b/src/components/Editor/CodeEditor/index.scss
@@ -11,21 +11,27 @@
   .editor {
     width: 100%;
     height: 100%;
+    overflow: hidden;
     .monaco-editor {
       background: blue;
-      height: 100%;
+      min-height: 200px;
+      .monaco-scrollable-element.editor-scrollable.vs {
+        text-align: left;
+      }
     }
   }
 
   .console {
+    text-align: left;
     .log-viewer {
       word-break: break-all;
-
       .log-controller-box {
         text-align: right;
       }
 
       .log-list {
+        overflow: auto;
+        height: 100px;
         .log-row {
           border-bottom: 1px solid #f0f0f0;
 
