IMPROVE-44 Mercury Improve code environment

--- a/src/components/Note/Paragraph/Editor.scss
+++ b/src/components/Note/Paragraph/Editor.scss
@@ -1,6 +1,6 @@
-@import url("~quill/dist/quill.core.css");
-@import url("~quill/dist/quill.snow.css");
-@import url("~quill-better-table/dist/quill-better-table.css");
+@import url("../../../../node_modules/quill/dist/quill.core.css");
+@import url("../../../../node_modules/quill/dist/quill.snow.css");
+@import url("../../../../node_modules/quill-better-table/dist/quill-better-table.css");
 
 .mercury-paragraph-editor {
   .ql-toolbar {
