IMPROVE-44 replace height on toolbar

--- a/src/components/Note/Paragraph/Editor.scss
+++ b/src/components/Note/Paragraph/Editor.scss
@@ -29,7 +29,7 @@
 
 .ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-options {
   border-color: #ccc;
-  height: 241px;
+  max-height: 241px;
   overflow: auto;
 }
 
