IMPROVE-52 Improve resize code container

--- a/src/components/Note/Paragraph/CodeEditorContainer/index.scss
+++ b/src/components/Note/Paragraph/CodeEditorContainer/index.scss
@@ -1,6 +1,10 @@
-.mercury-code-container {
+.mercury-code-container-resize-wrap {
   display: inline-block;
-  .mercury-code-editor {
-    height: 100%;
+  .mercury-code-container {
+    display: block;
+    width: 100%;
+    .mercury-code-editor {
+      height: 100%;
+    }
   }
 }
