IMPROVE-52 Pretty write environment

--- a/src/components/Note/Paragraph/Editor.scss
+++ b/src/components/Note/Paragraph/Editor.scss
@@ -21,7 +21,12 @@
 
     .ql-editor {
       height: calc(100vh - 91px);
+      padding: 3% 20%;
       iframe {
+        width: 100%;
+        &.ql-video {
+          height: 56%;
+        }
       }
     }
   }
@@ -64,9 +69,17 @@
   font-size: 8px !important;
 }
 
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="8px"]::before {
+  content: "8px";
+}
+
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="9px"]::before {
   content: "9px";
   font-size: 9px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="9px"]::before {
+  content: "9px";
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="10px"]::before {
@@ -74,9 +87,17 @@
   font-size: 10px !important;
 }
 
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="10px"]::before {
+  content: "10px";
+}
+
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="11px"]::before {
   content: "11px";
   font-size: 11px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="11px"]::before {
+  content: "11px";
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="12px"]::before {
@@ -84,9 +105,17 @@
   font-size: 12px !important;
 }
 
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="12px"]::before {
+  content: "12px";
+}
+
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="14px"]::before {
   content: "14px";
   font-size: 14px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="14px"]::before {
+  content: "14px";
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="16px"]::before {
@@ -94,9 +123,17 @@
   font-size: 16px !important;
 }
 
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="16px"]::before {
+  content: "16px";
+}
+
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="18px"]::before {
   content: "18px";
   font-size: 18px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="18px"]::before {
+  content: "18px";
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="20px"]::before {
@@ -104,9 +141,17 @@
   font-size: 20px !important;
 }
 
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="20px"]::before {
+  content: "20px";
+}
+
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="22px"]::before {
   content: "22px";
   font-size: 22px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="22px"]::before {
+  content: "22px";
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="24px"]::before {
@@ -114,9 +159,17 @@
   font-size: 24px !important;
 }
 
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="24px"]::before {
+  content: "24px";
+}
+
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="26px"]::before {
   content: "26px";
   font-size: 26px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="26px"]::before {
+  content: "26px";
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="28px"]::before {
@@ -124,9 +177,17 @@
   font-size: 28px !important;
 }
 
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="28px"]::before {
+  content: "28px";
+}
+
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="36px"]::before {
   content: "36px";
   font-size: 36px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="36px"]::before {
+  content: "36px";
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="48px"]::before {
@@ -134,7 +195,15 @@
   font-size: 48px !important;
 }
 
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="48px"]::before {
+  content: "48px";
+}
+
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="72px"]::before {
   content: "72px";
   font-size: 72px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="72px"]::before {
+  content: "72px";
 }
