IMPROVE-51 Updae at time on redner view

--- a/src/components/Note/Paragraph/CodeEditorContainer/Container/Render/index.scss
+++ b/src/components/Note/Paragraph/CodeEditorContainer/Container/Render/index.scss
@@ -1,2 +1,13 @@
-.mercury-render-container {
+.mercury-render-container-wrap {
+  position: relative;
+  .updated-at {
+    text-align: right;
+    font-size: 14px;
+    color: #bbbbbb;
+    position: absolute;
+    top: -42px;
+    right: 0;
+  }
+  .mercury-render-container {
+  }
 }
