IMPROVE-60 Key binding on editor

--- a/src/components/Note/Paragraph/CodeEditorContainer/Container/ActionBar/index.scss
+++ b/src/components/Note/Paragraph/CodeEditorContainer/Container/ActionBar/index.scss
@@ -1,3 +1,11 @@
 .editor-controller-box {
   text-align: right;
+  .bp3-button-group {
+    .run-code-button {
+      min-width: 130px;
+    }
+    .config-button {
+
+    }
+  }
 }
