--- a/src/components/Platform/Management/Notification/index.scss
+++ b/src/components/Platform/Management/Notification/index.scss
@@ -5,13 +5,16 @@
   .log-notification{
     color: white;
     background: #669EFF;
+    opacity: 0.8;
   }
   .error-notification{
     color: white;
     background: #A82255;
+    opacity: 0.8;
   }
   .warn-notification{
     color: white;
     background: #FFC940;
+    opacity: 0.8;
   }
 }
