IMPROVE-65 Implement note configuration

--- a/src/components/Navigation/Service/Partials/SuggestionForSaveNoteButton.scss
+++ b/src/components/Navigation/Service/Partials/SuggestionForSaveNoteButton.scss
@@ -1,8 +1,13 @@
 .mercury-suggestion-save-note-button {
-  transform: 0;
-
+  transform: 0deg;
+  transition: all 0.5s;
   &.suggest {
-    transition: all 0.3s;
+    transition: all 0.1s;
     transform: rotate(-360deg);
+    background: #137cbd !important;
+    border-radius: 50px;
+    span[icon] {
+      color: white;
+    }
   }
 }
