IMPROVE-49 Remove Note feature

--- a/src/components/Navigation/Service/Partials/SuggestionForSaveNoteButton.scss
+++ b/src/components/Navigation/Service/Partials/SuggestionForSaveNoteButton.scss
@@ -4,10 +4,9 @@
   &.suggest {
     transition: all 0.1s;
     transform: rotate(-360deg);
-    background: #137cbd !important;
     border-radius: 50px;
     span[icon] {
-      color: white;
+      color: #48AFF0;
     }
   }
 }
