IMPROVE-65 Auto save and guide code

--- a/src/components/Note/Paragraph/CodeEditorContainer/Container/Editor/index.scss
+++ b/src/components/Note/Paragraph/CodeEditorContainer/Container/Editor/index.scss
@@ -2,7 +2,7 @@
   height: 100%;
   .editor {
     height: 100%;
-    min-height: 300px;
+    min-height: 50vh;
     .monaco-editor {
       height: 100%;
       .margin {
