--- a/src/pages/Notes/Paragraph/Paragraph.scss
+++ b/src/pages/Notes/Paragraph/Paragraph.scss
@@ -2,3 +2,11 @@ $fa-font-path: "../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
+
+.mercury-paragraph {
+  .mercury-paragraph-loading {
+    position: fixed;
+    top: 50%;
+    left: 45%;
+  }
+}
