--- a/src/components/Platform/Management/Notification/index.scss
+++ b/src/components/Platform/Management/Notification/index.scss
@@ -14,7 +14,7 @@
   }
   .warn-notification{
     color: white;
-    background: #FFC940;
+    background: rgb(209, 160, 35);
     opacity: 0.8;
   }
 }
