--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
 html {
   body {
     * {
-      font-family: "Source Code Pro", "monospace", "Arial", "Icons20", "Font Awesome 5 Free";
+      font-family: "Source Code Pro", "monospace", "Arial", "Icons20", "Font Awesome 5 Free", "Noto Sans" , "Nanum Gothic";
       &:focus {
         outline: none;
       }
