IMPROVE-71 Remove serializer javascript

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 
 html {
   body {
+    background: #f5f8fa;
     * {
       font-family: "Source Code Pro", "monospace", "Arial", "Icons20", "Font Awesome 5 Free", "Noto Sans" , "Nanum Gothic";
       &:focus {
