--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -51,6 +51,7 @@
     .person-card {
       display: inline-block;
       width: 320px;
+      background: #fff;
       box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.15), 0 0 0 rgba(16, 22, 26, 0), 0 0 0 rgba(16, 22, 26, 0);
       border-radius: 3px;
       word-break: break-all;
